# AdHub

./: README.md  docker-compose.yml  pyproject.toml
ads/: filters.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
ads/management/commands/: fill_db.py
ads/migrations/: 0001_initial.py
config/: settings.py  urls.py
reviews/: models.py  serializers.py  tests.py  urls.py  views.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
